# CarrotIsYou

./: .gitignore  NEXY4DDR.md  ProjectBreakdown.md  README.md
CarrotIsYou-gamecore/: CIYBase.h  CIYBoard.cpp  CIYBoard.h  CIYCore.cpp  CIYCore.h  CarrotOS.cpp  CarrotOS.h  Makefile  baremain.cpp  main.cpp
CarrotIsYou-gamecore/lib/: BufVector.h  Interfaces.h  LevelManager.cpp  LevelManager.h  MiniMalloc.cpp  MiniMalloc.h  MiniVector.cpp  MiniVector.h
CarrotIsYou-utils/: boardEditor.py  json2map.js  json2map.py  level.txt  package-lock.json  pixel.json  pixel.txt  png2data.js  png2data.py
baba_cpu/: .gitignore  baba_cpu.xpr  min_area_pfile.tmp  single_cycle_cpu_board_tb_behav.wcfg
baba_cpu/program/: risc-v-benchmark_ccab.hex  rom.mem.txt  sort_ram.mem  sort_rom.mem  test.sh  test_ram.coe  test_ram.mem  test_rom.mem  tocoe.py  toramcoe.cpp
docs/: ProjectBreakdown.md
gamecore/: CIYBase.h  CIYBoard.cpp  CIYBoard.h  CIYCore.cpp  CIYCore.h  CMakeLists.txt  CarrotOS.cpp  CarrotOS.h  baremain.cpp  main.cpp  riscv_main.cpp  sdl_main.cpp
gamecore/lib/: BufVector.h  Interfaces.cpp  Interfaces.h  LevelManager.cpp  MiniMalloc.cpp  MiniMalloc.h  MiniVector.h  keyInput.cpp  keyInput.h  libdevice.cpp  libdevice.h
pixel/: README.md
pixel/aseprite/: 00-卡-item.aseprite  01-宝-item.aseprite  03-石-item.aseprite  05-火-item.aseprite  07-心-item.aseprite  08-洛-item.aseprite  09-门-item.aseprite  100-邦-text.aseprite  101-李-text.aseprite  102-诗-text.aseprite  103-阳-text.aseprite  104-龚-text.aseprite  (+75 more)
utils/: boardEditor.py  level.txt  pixel.txt  png2data.py  removed_json2map.js
(+367 files in other folders)
